# Blender-Benchmarks

./: .gitignore  README.md  pyproject.toml
src/BlenderBenchmarks/: __main__.py  measure_load_time.py
