[project]
name = "Blender-Benchmarks"
authors = [
    {name = "Nathalie Winkler"},
    {name = "Alexander Winkler"}
]
version = "0.1"
dependencies = []
readme = "README.md"

[project.scripts]
BlenderBenchmarks = "BlenderBenchmarks.main:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"